@@ -5,7 +5,7 @@ use Test::More;
 use Compression::Util qw(:all);
 use List::Util        qw(shuffle);
 
-plan tests => 657;
+plan tests => 673;
 
 ##################################
 
@@ -73,6 +73,7 @@ foreach my $str (
   ) {
     test_array(string2symbols($str));
 
+    is(bzip2_decompress(bzip2_compress($str)),                                           $str);
     is(lzb_decompress(lzb_compress($str)),                                               $str);
     is(lzb_decompress(lzb_compress($str, \&lzss_encode_fast)),                           $str);
     is(lz77_decompress(lz77_compress($str)),                                             $str);
@@ -82,6 +83,8 @@ foreach my $str (
     is(bwt_decompress(bwt_compress($str)),                                               $str);
     is(symbols2string(mrl_decompress_symbolic(mrl_compress_symbolic($str))),             $str);
 }
+
+is(bzip2_decompress(bzip2_compress('')), '');
 
 is(bwt_decompress(bwt_compress('a')),                                               'a');
 is(lzss_decompress(lzss_compress('a')),                                             'a');
@@ -356,3 +359,43 @@ is_deeply(lzss_decompress_symbolic(lzss_compress_symbolic([])),  []);
     is($word2, "bar");
     is($word3, "abracadabra");
 }
+
+###############################################
+
+{
+
+    is(crc32("The quick brown fox jumps over the lazy dog"), 0x414fa339);
+
+    my $p1 = crc32("The quick brown fox jumps");
+    my $p2 = crc32(" over the lazy dog", $p1);
+
+    is($p2, 0x414fa339);
+}
+
+{
+    # Bzip2 CRC32
+
+    my $str = "Hello, world!";
+    is(oct('0b' . int2bits_lsb(crc32(pack('b*', unpack('B*', $str))), 32)), 0x8e9a7706);
+}
+
+################################################
+
+is(bzip2_decompress("BZh91AY&SY\xEA\xE0\x8D\xEB\0\0\0\xC1\0\0\x100\0 \0!\x98\31\x84aw\$S\x85\t\16\xAE\b\xDE\xB0"), "ab\n");
+is(
+    bzip2_decompress("BZh91AY&SY\x99\xAC\"V\0\0\2W\x80\0\20`\4\0@\0\x80\6\4\x90\0 \0\"\6" . "\x81\x90\x80i\xA6\x89\30j\xCE\xA4\31o\x8B\xB9\"\x9C(HL\xD6\21+\0"),
+    "Hello, World!\n"
+  );
+is(
+    bzip2_decompress(
+                         "BZh91AY&SY\xE9\xA6L\xBE\0\0\20\xC9\x80\n\20\2\xE0?\xFB\x8B0"
+                       . " \0\x89\fE2i\xA3&\x9A\3A)\xEA\"'\xA8h\3\xD4\xD3gxRZ\4\x8C\xDA'g,\x88\xD5\xA6"
+                       . "\x9C\xEA\xC4\30wWy\xE4\xD7\xC0\x95\xF9L\x89\5\x936'\xED\x95a\22o%B\x90\x93"
+                       . "T\xAF\xFD\xE6\xEA)\x8D\x90\x82\xB5\x9E\x89Z\xD7X\xB19\x9D0\xC9\21s\x9E\x95"
+                       . "\1\xB2F\xE9\x98\xFD\x8A+O\xAD\xBDi\x96s\e\0\4\xA3G\xC0\xB2\4\xA6_\x8B\xB9\"\x9C(Ht\xD3&_\0"
+                    ),
+
+    "abhdhdjfhfhfjfjfhhdhdhdhdhdhdhdhdhdhdhdhdhdhdhdhdhdhdhdhdhdhdaaaaaaammmmmmmmmabababaabababaa"
+      . "b998899987ababaababababczzzczvzczvzvzvzvzvzvzvzvzvzvzvzvzvzvzvzkdkdkdjdkdjdjdjdkdkdkdkdkdkdkdj"
+      . "dkdkdjdjdkdjdjdjdjdjdkdmumuishdjdhdhdksjgsyshfbjcidbdbyhebdkjgsbshyehdbididhsbdjodhhdnkduf5\n"
+  );
